# gurulearn

./: README.md  gurulearn-readme.md  pyproject.toml  readme1.md  setup.py  ss-supplier.ipynb  test_gurulearn.py
gurulearn/: AgentQA.py  Audio.py  ChatFlow.py  CtScan.py  Image_Classification.py  Machine_Learning.py  __init__.py  desktop.ini  ensure.py  py.typed
gurulearn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gurulearn/ocr/: __init__.py  augment.py  data.py  inference.py  model.py  pipeline.py
